// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`active renders correctly 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 kudos-card css-1gtchvp-MuiPaper-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="kudos-card-header"
    >
      <div
        class="members-container"
      >
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-5c51lm-MuiChip-root"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiChip-avatar MuiChip-avatarMedium MuiChip-avatarColorDefault css-fmeqll-MuiAvatar-root"
          >
            <img
              class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
              src="http://localhost:8080/services/member-profiles/member-photos/undefined"
            />
          </div>
          <span
            class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
          >
            Jimmy Olsen
          </span>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          received kudos from
        </p>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-5c51lm-MuiChip-root"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiChip-avatar MuiChip-avatarMedium MuiChip-avatarColorDefault css-fmeqll-MuiAvatar-root"
          >
            <img
              class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
              src="http://localhost:8080/services/member-profiles/member-photos/undefined"
            />
          </div>
          <span
            class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
          >
            Jimmy Johnson
          </span>
        </div>
      </div>
      <div
        class="kudos-status-container"
      >
        <div
          class="kudos-action-buttons"
        >
          <button
            aria-label="Approve"
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSuccess MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorSuccess MuiButton-root MuiButton-outlined MuiButton-outlinedSuccess MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorSuccess css-1b1lt30-MuiButtonBase-root-MuiButton-root"
            data-mui-internal-clone-element="true"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="CheckIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
              />
            </svg>
          </button>
          <button
            aria-label="Edit"
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-wyro15-MuiButtonBase-root-MuiButton-root"
            data-mui-internal-clone-element="true"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="EditIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
              />
            </svg>
          </button>
          <button
            aria-label="Delete"
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedError MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorError MuiButton-root MuiButton-outlined MuiButton-outlinedError MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorError css-1vvreb9-MuiButtonBase-root-MuiButton-root"
            data-mui-internal-clone-element="true"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="CloseIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
    />
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
        >
          <div
            class="kudos-card-content"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
            >
              Jimmy is awesome!
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`inactive renders correctly 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 kudos-card css-1gtchvp-MuiPaper-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="kudos-card-header"
    >
      <div
        class="members-container"
      >
        <div
          class="MuiAvatarGroup-root css-1sx06gy-MuiAvatarGroup-root"
          style="--AvatarGroup-spacing: -8px;"
        >
          <div
            aria-label="Jimmy Olsen"
            class="MuiAvatar-root MuiAvatar-circular MuiAvatarGroup-avatar css-fmeqll-MuiAvatar-root"
            data-mui-internal-clone-element="true"
          >
            <img
              class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
              src="http://localhost:8080/services/member-profiles/member-photos/undefined"
            />
          </div>
          <div
            aria-label="Kent Brockman"
            class="MuiAvatar-root MuiAvatar-circular MuiAvatarGroup-avatar css-fmeqll-MuiAvatar-root"
            data-mui-internal-clone-element="true"
          >
            <img
              class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
              src="http://localhost:8080/services/member-profiles/member-photos/undefined"
            />
          </div>
          <div
            aria-label="Brock Smith"
            class="MuiAvatar-root MuiAvatar-circular MuiAvatarGroup-avatar css-fmeqll-MuiAvatar-root"
            data-mui-internal-clone-element="true"
          >
            <img
              class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
              src="http://localhost:8080/services/member-profiles/member-photos/undefined"
            />
          </div>
          <div
            aria-label="Clark Kent"
            class="MuiAvatar-root MuiAvatar-circular MuiAvatarGroup-avatar css-fmeqll-MuiAvatar-root"
            data-mui-internal-clone-element="true"
          >
            <img
              class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
              src="http://localhost:8080/services/member-profiles/member-photos/undefined"
            />
          </div>
          <div
            aria-label="Jimmy Olsen"
            class="MuiAvatar-root MuiAvatar-circular MuiAvatarGroup-avatar css-fmeqll-MuiAvatar-root"
            data-mui-internal-clone-element="true"
          >
            <img
              class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
              src="http://localhost:8080/services/member-profiles/member-photos/undefined"
            />
          </div>
          <div
            aria-label="Jimmy Johnson"
            class="MuiAvatar-root MuiAvatar-circular MuiAvatarGroup-avatar css-fmeqll-MuiAvatar-root"
            data-mui-internal-clone-element="true"
          >
            <img
              class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
              src="http://localhost:8080/services/member-profiles/member-photos/undefined"
            />
          </div>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          received kudos from
        </p>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-5c51lm-MuiChip-root"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiChip-avatar MuiChip-avatarMedium MuiChip-avatarColorDefault css-fmeqll-MuiAvatar-root"
          >
            <img
              class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
              src="http://localhost:8080/services/member-profiles/member-photos/undefined"
            />
          </div>
          <span
            class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
          >
            Jerry Garcia
          </span>
        </div>
      </div>
      <div
        class="kudos-status-container"
      >
        <div
          class="kudos-action-buttons"
        >
          <button
            aria-label="Approve"
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSuccess MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorSuccess MuiButton-root MuiButton-outlined MuiButton-outlinedSuccess MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorSuccess css-1b1lt30-MuiButtonBase-root-MuiButton-root"
            data-mui-internal-clone-element="true"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="CheckIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
              />
            </svg>
          </button>
          <button
            aria-label="Edit"
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-wyro15-MuiButtonBase-root-MuiButton-root"
            data-mui-internal-clone-element="true"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="EditIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
              />
            </svg>
          </button>
          <button
            aria-label="Delete"
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedError MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorError MuiButton-root MuiButton-outlined MuiButton-outlinedError MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorError css-1vvreb9-MuiButtonBase-root-MuiButton-root"
            data-mui-internal-clone-element="true"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="CloseIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
    />
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-qr6njo-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
        >
          <div
            class="kudos-card-content"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
            >
              Brock and Brockman did a great job helping Clark, Jimmy Olsen, Jimmy T. Olsen, and Johnson
            </p>
            <div
              class="kudos-recipient-list"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
              >
                Members:
              </p>
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-5c51lm-MuiChip-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular MuiChip-avatar MuiChip-avatarMedium MuiChip-avatarColorDefault css-fmeqll-MuiAvatar-root"
                >
                  <img
                    class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
                    src="http://localhost:8080/services/member-profiles/member-photos/undefined"
                  />
                </div>
                <span
                  class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
                >
                  Jimmy Johnson
                </span>
              </div>
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-5c51lm-MuiChip-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular MuiChip-avatar MuiChip-avatarMedium MuiChip-avatarColorDefault css-fmeqll-MuiAvatar-root"
                >
                  <img
                    class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
                    src="http://localhost:8080/services/member-profiles/member-photos/undefined"
                  />
                </div>
                <span
                  class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
                >
                  Jimmy Olsen
                </span>
              </div>
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-5c51lm-MuiChip-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular MuiChip-avatar MuiChip-avatarMedium MuiChip-avatarColorDefault css-fmeqll-MuiAvatar-root"
                >
                  <img
                    class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
                    src="http://localhost:8080/services/member-profiles/member-photos/undefined"
                  />
                </div>
                <span
                  class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
                >
                  Clark Kent
                </span>
              </div>
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-5c51lm-MuiChip-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular MuiChip-avatar MuiChip-avatarMedium MuiChip-avatarColorDefault css-fmeqll-MuiAvatar-root"
                >
                  <img
                    class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
                    src="http://localhost:8080/services/member-profiles/member-photos/undefined"
                  />
                </div>
                <span
                  class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
                >
                  Brock Smith
                </span>
              </div>
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-5c51lm-MuiChip-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular MuiChip-avatar MuiChip-avatarMedium MuiChip-avatarColorDefault css-fmeqll-MuiAvatar-root"
                >
                  <img
                    class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
                    src="http://localhost:8080/services/member-profiles/member-photos/undefined"
                  />
                </div>
                <span
                  class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
                >
                  Kent Brockman
                </span>
              </div>
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault css-5c51lm-MuiChip-root"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular MuiChip-avatar MuiChip-avatarMedium MuiChip-avatarColorDefault css-fmeqll-MuiAvatar-root"
                >
                  <img
                    class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
                    src="http://localhost:8080/services/member-profiles/member-photos/undefined"
                  />
                </div>
                <span
                  class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
                >
                  Jimmy Olsen
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
